<resources>
    <string name="app_name">BrainTraining</string>
    <string name="title_home">Home</string>
    <string name="title_play">Play</string>
    <string name="title_learn">Learn</string>
    <string name="title_settings">Settings</string>
    <!-- Strings for games -->
    <string name="game_trivia">Trivia</string>
    <string name="text_trivia">placeholder question?</string>
    <string name="text_answer">Input Answer</string>
    <string name="text_correct">Correct!</string>
    <string name="text_incorrect">Incorrect, the correct answer is:</string>
    <string name="text_incorrect2">Incorrect.</string>
    <string name="game_riddles">Riddles</string>
    <string name="text_riddles">placeholder riddle</string>
    <string name="answer_riddles1">answer1</string>
    <string name="answer_riddles2">answer2</string>
    <string name="answer_riddles3">answer3</string>
    <string name="answer_riddles4">answer4</string>
    <string name="game_reaction">Reaction</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_colourQuestion">Does the meaning of the word on the left match the colour of the word on the right?</string>
    <string name="game_colour">Colour</string>
    <string name="game_vocabulary">Vocabulary</string>
    <string name="title_activity_reaction">ReactionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_riddle">RiddleActivity</string>

</resources>